# GammaRayServerCxx

./: .gitmodules  CMakeLists.txt  env_settings.cmake
.github/workflows/: build-release.yml
manager/: CMakeLists.txt  main.cpp  mgr_context.cpp  mgr_context.h  mgr_server.cpp  mgr_server.h  mgr_session.cpp  mgr_session.h
manager/database/: CMakeLists.txt  mgr_client.cpp  mgr_client.h  mgr_database.cpp  mgr_database.h  mgr_device.cpp  mgr_device.h  mgr_user.cpp  mgr_user.h
manager/handler/: CMakeLists.txt  client_handler.cpp  client_handler.h
manager/message/: CMakeLists.txt
manager/settings/: CMakeLists.txt  GammaRayManageServer.toml  mgr_settings.cpp  mgr_settings.h
package/: build_win.bat
relay/: CMakeLists.txt  main.cpp  relay_client.cpp  relay_client.h  relay_client_mgr.cpp  relay_client_mgr.h  relay_context.cpp  relay_context.h  relay_device.cpp  relay_device.h  relay_device_mgr.cpp  relay_device_mgr.h  relay_messages.h  relay_peer.cpp  relay_peer.h  relay_peer_mgr.cpp  relay_peer_mgr.h  relay_proto_maker.cpp  relay_proto_maker.h  relay_room.cpp  relay_room.h  relay_room_mgr.cpp  relay_room_mgr.h  relay_server.cpp  relay_server.h  relay_session.cpp  relay_session.h
relay/handler/: CMakeLists.txt  client_handler.cpp  client_handler.h  device_handler.cpp  device_handler.h  room_handler.cpp  room_handler.h
relay/message/: CMakeLists.txt  relay_message.proto
relay/settings/: CMakeLists.txt  GammaRayRelayServer.toml  relay_settings.cpp  relay_settings.h
